--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=217.21.67.64
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u186122375_laravel
+DB_USERNAME=u186122375_admin_laravel
+DB_PASSWORD=r4H]Fe~K&hw
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
